--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 <body>
     <!-- header start -->
     <header>
+        <nav>
+            <span id="main-nav">
+              <a href="">Home</a>
+              <a href="">Products</a>
+              <a href="">Order</a>
+              <a href="">About us</a>
+            </span>
+              <span id="sub-nav">
+                  <a href=""><i class="fas fa-user"></i></a>
+              <a href=""><i class="fas fa-sign-out-alt"></i></a>
+              </span>
+          </nav>
 
     </header>
     <!-- header end -->
@@ -52,10 +64,10 @@
                 </div>
                 <div class="blog-info">
                     <h3 class="blog-title">
-                        13 of My Favorite UI/UX Goodies
+                        UI cheat sheet list vs grids
                     </h3>
                     <p class="blog-author">
-                    By<a href="">Danny Sapio</a></p>
+                    By<a href="">Torrent Wan</a></p>
                 </div>
             </article>                        
             <article class="blog">
@@ -64,10 +76,10 @@
                 </div>
                 <div class="blog-info">
                     <h3 class="blog-title">
-                        13 of My Favorite UI/UX Goodies
+                        7 typography tips for interface desig
                     </h3>
                     <p class="blog-author">
-                    By<a href="">Danny Sapio</a></p>
+                    By<a href="">Scout Mac</a></p>
                 </div>
             </article>                        
             <article class="blog">
@@ -76,10 +88,10 @@
                 </div>
                 <div class="blog-info">
                     <h3 class="blog-title">
-                        13 of My Favorite UI/UX Goodies
+                        Your logo is copied
                     </h3>
                     <p class="blog-author">
-                    By<a href="">Danny Sapio</a></p>
+                    By<a href="">Watson debit</a></p>
                 </div>
             </article>                        
 
