--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- header start -->
     <header>
         <nav>
+            <img class="logo" src="images/icons/logo.png" alt="">
             <span id="main-nav">
               <a href="">Home</a>
               <a href="">Products</a>
